We need to fix the blue background because is not responsive

--- a/StylesHome/Footer.css
+++ b/StylesHome/Footer.css
@@ -3,6 +3,7 @@
     background-color: #212529;
     color: #ffffff;
     width: 100%;
+    z-index: 1;
   }
   
   /* logo */
